core: sync with blueprint v1.0.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ flask
 flask-restful
 Flask-Testing
 requests==2.4.3
+flask-discoverer
+-e git+https://github.com/adsabs/flask-consulate@8d7e60122cbc73693ac37a5468b9be78bea774a1#egg=flask-consulate
