still not sure if I should keep the authrization token or not

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --cov=export_service --cov-report=term-missing
-testpaths = export_service 
+addopts = --cov=exportsrv --cov-report=term-missing
+testpaths = exportsrv
