--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,22 @@
-language: python
-python:
-- "2.7"
-install:
-- pip install -r requirements.txt
-script: "python tests/run_tests.py"
+llanguage: python
 
+python:
+  - "2.7"
+
+services:
+  - redis-server
+
+install:
+  - "pip install -r requirements.txt"
+  - "pip install -r dev-requirements.txt"
+
+script:
+  - "py.test"
+
+after_success:
+  - "coveralls"
+
+notifications:
+  email: false
+
+sudo: false
