--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
 
 install:
+  - "pip install --upgrade setuptools"
   - "pip install -r requirements.txt"
   - "pip install -r dev-requirements.txt"
 
@@ -12,5 +13,8 @@ script:
 
 after_success:
   - "coveralls"
+
+notifications:
+  email: false
 
 sudo: false
