--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/adsabs/ADSMicroserviceUtils.git@master
+git+https://github.com/adsabs/ADSMicroserviceUtils.git@v1.0.2
 adsutils==1.0.33
 citeproc-py==0.3.0
 Flask==0.12.2
@@ -7,3 +7,4 @@ Flask-RESTful==0.3.6
 Flask-Testing==0.6.2
 lxml==3.8.0
 requests==2.4.3
+pylatexenc==1.2
