--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 
 python:
-  - "2.7"
+  - "3.8"
 
 install:
+  - "pip install --upgrade pip"
   - "pip install --upgrade setuptools"
   - "pip install -r requirements.txt"
   - "pip install -r dev-requirements.txt"
