--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -6,8 +6,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
     steps:
     - uses: actions/checkout@v2
@@ -24,5 +22,8 @@ jobs:
     - name: Test with pytest
       run: |
         py.test
-        
-    - run: coveralls
+
+    - name: Upload coverage data to coveralls.io
+      run: coveralls
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
