--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -15,7 +15,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade setuptools pip
+        # python -m pip install --upgrade setuptools pip
+        python -m pip install --upgrade pip
         pip install -U -r requirements.txt
         pip install -U -r dev-requirements.txt
         
