Fix version of itsdangerous due to dependency issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 git+https://github.com/adsabs/ADSMicroserviceUtils.git@v1.1.9
 citeproc-py==0.5.1
 future==0.18.2
+itsdangerous==2.0.1
 lxml==4.6.5
 unidecode===1.2.0
