--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ git+https://github.com/adsabs/ADSMicroserviceUtils.git@v1.1.9
 citeproc-py==0.5.1
 future==0.18.2
 itsdangerous==2.0.1
+jinja2==3.0.3
 lxml==4.6.5
-unidecode===1.2.0
+unidecode==1.2.0
+werkzeug==2.0.2
