--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 git+https://github.com/adsabs/ADSMicroserviceUtils.git@v1.1.9
 citeproc-py==0.5.1
 future==0.18.2
+geotext==0.4.0
 itsdangerous==2.0.1
 jinja2==3.0.3
 lxml==4.6.5
