--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         # python -m pip install --upgrade setuptools pip
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade wheel pip
         pip install -U -r requirements.txt
         pip install -U -r dev-requirements.txt
         
